--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,10 @@
         "psr-4": { "Omnipay\\NetBanx\\" : "src/" }
     },
     "require": {
-        "omnipay/common": "~2.0"
+        "omnipay/common": "^3"
     },
     "require-dev": {
-        "omnipay/tests": "~2.0"
+        "omnipay/tests": "^3"
     },
     "extra": {
         "branch-alias": {
